<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.WelcomeActivity"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
        style="@style/normalText"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:hint="Your name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPetName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:hint="@string/pet_name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/newPetType"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:hint="@string/pet_type"/>

    </android.support.design.widget.TextInputLayout>

    <!--<Spinner
        android:id="@+id/newFriendType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pet_likes"
                style="@style/cardTitle"/>
            <CheckBox android:id="@+id/checkbox_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play"
                android:onClick="onCheckboxClicked"/>
            <CheckBox android:id="@+id/checkbox_cuddles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuddles"
                android:onClick="onCheckboxClicked"/>
    </LinearLayout>

    <Button
        android:text="@string/add_photo"
        android:id="@+id/addPhotoBtn"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:visibility="gone"/>

    <Button
        android:textColor="@android:color/white"
        android:layout_marginTop="32dp"
        android:id="@+id/submitNewPet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        android:text="@string/submit"/>

</LinearLayout>