<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.activity.EditAccountActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:hint="Your name"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/formItem">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editPetName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapWords"
            android:hint="@string/pet_name"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            style="@style/formLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_type"
            android:layout_marginTop="8dp"
            android:layout_marginStart="4dp"/>

        <Spinner
            android:id="@+id/editPetType"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_likes"
            style="@style/cardTitle"
            android:layout_marginBottom="6dp"/>
        <CheckBox android:id="@+id/checkbox_edit_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Food"
            android:onClick="onEditLikes"/>
        <CheckBox android:id="@+id/checkbox_edit_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Play"
            android:onClick="onEditLikes"/>
        <CheckBox android:id="@+id/checkbox_edit_cuddles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cuddles"
            android:onClick="onEditLikes"/>
    </LinearLayout>

    <Button
        android:id="@+id/saveAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/account_save"
        style="@style/buttonPrimary"/>

</LinearLayout>